--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,12 @@
       <version>5.5.0</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.jetbrains.kotlin</groupId>
+      <artifactId>kotlin-stdlib</artifactId>
+      <version>1.9.22</version>
+    </dependency>
+
   </dependencies>
 
   <build>
